<resources>
    <string name="app_name">MyBio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="form">Formulir</string>
    <string name="screen">Tampil</string>
    <string name="nama">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="tempat_tanggal_lahir">Tempat Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="selamat_datang">Selamat Datang</string>
</resources>